<resources>
    <string name="app_name">MobileSensors</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to Mobile Sensors\nTap next to see sensor values</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="photometer">Photometer</string>
</resources>